// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render InputWithErrorTooltip component with input 1`] = `
<div
  className="search-form__input-container"
>
  <div
    className="search-form__label-input"
  >
    <label
      className="search-form__label"
    >
      Test
    </label>
    <input
      type="text"
    />
  </div>
</div>
`;

exports[`should render InputWithErrorTooltip component with input and default props 1`] = `
<div
  className="search-form__input-container"
>
  <div
    className="search-form__label-input"
  >
    <input
      type="text"
    />
  </div>
</div>
`;

exports[`should render InputWithErrorTooltip disabled 1`] = `
<div
  className="search-form__input-container"
>
  <div
    className="search-form__label-input search-form__label-input--disabled"
  >
    <label
      className="search-form__label"
    >
      Test
    </label>
    <input
      type="text"
    />
  </div>
</div>
`;

exports[`should render InputWithErrorTooltip with error message 1`] = `
<div
  className="search-form__input-container"
>
  <div
    className="search-form__label-input search-form__label-input--error search-form__label-input--disabled"
  >
    <label
      className="search-form__label"
    >
      Test
    </label>
    <input
      type="text"
    />
  </div>
  <div
    className="search-form__error search-form__error--open"
  >
    <span
      className="search-form__error-text"
    >
      Please type text
    </span>
  </div>
</div>
`;
